--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "iwfetcoin",
   "version": "1.0.0",
   "description": "",
+  "module": "commonjs", 
   "main": "main.js",
   "scripts": {
     "start": "node build/main.js",
     "compile": "tsc",
-    "dev":"nodemon"
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +25,9 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/crypto-js": "^4.2.1",
+    "@types/elliptic": "^6.4.18",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.202",
     "@types/ws": "^8.5.10",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
