--- a/block-chain/package.json
+++ b/block-chain/package.json
@@ -2,7 +2,7 @@
   "name": "iwfetcoin",
   "version": "1.0.0",
   "description": "",
-  "module": "commonjs", 
+  "module": "commonjs",
   "main": "main.js",
   "scripts": {
     "start": "node build/main.js",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "bignumber.js": "^9.1.2",
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
